welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: value prendBiscuit is not a member of Unit
	()prendBiscuit;
          ^